--- a/opineEvento/src/main/webapp/WEB-INF/web.xml
+++ b/opineEvento/src/main/webapp/WEB-INF/web.xml
@@ -10,6 +10,12 @@
 		<welcome-file>login/</welcome-file>
 	</welcome-file-list>
 
+	<context-param>
+		<description>VRaptor handles HTTP</description>
+		<param-name>br.com.caelum.vraptor.encoding</param-name>
+		<param-value>UTF-8</param-value>
+	</context-param>
+
 	<filter>
 		<filter-name>vraptor</filter-name>
 		<filter-class>br.com.caelum.vraptor.VRaptor</filter-class>
